# hymo

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  README_ZH.md  build.sh  changelog.md  update.json
.github/: dependabot.yml
.github/workflows/: build.yml  dependabot-auto-merge.yml  release.yml
docs/: README_ZH.md
module/: .gitignore  customize.sh  metamount.sh  module.prop  post-fs-data.sh  uninstall.sh
rust/: CMakeLists.example.txt  Cargo.toml  README.md  build-ndk.sh  build.rs
rust/include/: hymo_minimal.h
rust/src/: hymofs.rs  ioctl.rs  lib.rs  main.rs
script/: hymobot.py
src/: Makefile  defs.hpp  hymo.hpp  magic_mount.c  magic_mount.h  main.c  main.cpp  main.rs  utils.c  utils.cpp  utils.h  utils.hpp  utils.rs
src/conf/: config.cpp  config.hpp
src/core/: executor.cpp  executor.hpp  inventory.cpp  inventory.hpp  lkm.cpp  lkm.hpp  modules.cpp  params.hpp  planner.cpp  planner.hpp  state.cpp  state.hpp  storage.cpp  sync.cpp  sync.hpp  user_rules.cpp  webui.cpp
src/magic_mount/: try_umount.rs
src/mount/: hymo_magic.h  hymofs.cpp  hymofs.hpp  magic.cpp  partition_utils.cpp
src/mount/magic/: mod.rs
template/: customize.sh  metainstall.sh  metamount.sh  module.prop
webui/: package-lock.json  package.json  pnpm-lock.yaml
webui/src/i18n/: index.ts
webui/src/pages/: ConfigPage.tsx  HymoFSPage.tsx
webui/src/services/: api.ts
webui/src/types/: index.ts
xbuild/src/: main.rs
